# Tello-Drone-Control-Desktop-App

./: .gitignore  CHANGELOG.md  README.md
.github/workflows/: monorepo-ci.yml
InstallFrontEnd/TelloDroneFrontEnd/: main.js  package-lock.json  package.json
InstallFrontEnd/TelloDroneFrontEnd/src/: index.html
PythonApp/: main.py  requirements.txt
SvelteTelloApp/: README.md  index.html  package-lock.json  package.json  start-dev.ps1  tailwind.config.js  tsconfig.json  vite.config.ts
SvelteTelloApp/src/: App.svelte  app.css
SvelteTelloApp/src-tauri/: Cargo.toml  tauri.conf.json
SvelteTelloApp/src-tauri/icons/: README.md  icon.icns
SvelteTelloApp/src-tauri/src/: main.rs  video_capture.rs
SvelteTelloApp/src/lib/: api.ts  constants.ts  themes.ts
SvelteTelloApp/src/lib/components/: ConnectingOverlay.svelte  ConnectionStatus.svelte  DroneControl.svelte  FaceRecognition.svelte  FreeFly.svelte  Gallery.svelte  LoadingScreen.svelte  ReconnectScreen.svelte  Recording.svelte  Settings.svelte  SkeletonLoader.svelte  Telemetry.svelte  ThemeSelector.svelte  ThemeToggle.svelte  Tricks.svelte  VideoFeed.svelte
SvelteTelloApp/src/lib/stores/: drone.ts  gallery.ts  recognition.ts  settings.ts  theme.ts
docs/: ARCHITECTURE.md  DEVELOPMENT.md  FINAL_IMPLEMENTATION.md  FINAL_SUMMARY.md  IMPLEMENTATION_STATUS.md  INSTALLATION_FIXES.md  MIGRATION.md  OVERVIEW.md  PROJECT_STATUS.md  PYTHON_TO_SVELTE_MIGRATION.md  QUICKSTART.md  QUICK_REFERENCE.md  QUICK_START.md  SETUP.md  SUMMARY.md  TELLOJS_INTEGRATION.md  VIDEO_DEBUG.md  VIDEO_IMPLEMENTATION_PLAN.md
(+10 files in other folders)
