[package]
name = "tello-drone-control"
version = "0.1.0"
description = "A Tauri App for controlling Tello drones"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
tauri = { version = "1.5.4", features = ["http-all", "fs-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
base64 = "0.21"
anyhow = "1.0"
thiserror = "1.0"
bytes = "1.5"

[features]
custom-protocol = ["tauri/custom-protocol"]
